--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
           command: |
             export NPM_TOKEN=${SNAPSHOT_NPM_TOKEN}
             npm config set ${NPM_PACKAGE_SCOPE}:registry ${NPM_SNAPSHOT_REPO}
-            yarn build
+            yarn prerelease
+            yarn build || true
             npx semantic-release
   release:
     docker:
@@ -20,8 +21,9 @@ jobs:
     steps:
       - checkout
       - run: yarn install --frozen-lockfile --non-ineractive
-      - run: yarn build
       - run: echo "Running release job"
+      - run: yarn prerelease
+      - run: yarn build || true
       - run:
           name: Deploy
           command: npx semantic-release
