comments [ci skip]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
             export NPM_TOKEN=${SNAPSHOT_NPM_TOKEN}
             npm config set ${NPM_PACKAGE_SCOPE}:registry ${NPM_SNAPSHOT_REPO}
             yarn prerelease
+            # some of the build scripts exit with status code other then 0, though they seem to work
+            # properly. So we don't let the pipeline fail
             yarn build || true
             npx semantic-release
   release:
@@ -23,6 +25,8 @@ jobs:
       - run: yarn install --frozen-lockfile --non-ineractive
       - run: echo "Running release job"
       - run: yarn prerelease
+        # some of the build scripts exit with status code other then 0, though they seem to work
+        # properly. So we don't let the pipeline fail
       - run: yarn build || true
       - run:
           name: Deploy
